# EfficientShading

./: .gitignore  CMakeLists.txt  README.md
asset/basic/: mesh.hlsl
asset/bindless/: bindless.hlsl
asset/clustered/: cluster.hlsl  common.hlsl  forward.hlsl
asset/common/: pbs.hlsl  sky_ps.hlsl  sky_vs.hlsl
asset/deferred/: gbuffer.hlsl  lighting.hlsl
asset/hierarchyz/: cull.hlsl  depth.hlsl  forward.hlsl  forward_culled.hlsl  hierarchy.hlsl
asset/predepth/: depth.hlsl  forward.hlsl
src/0-basic/: main.cpp  mesh.cpp  mesh.h
src/1-deferred/: main.cpp  mesh.cpp  mesh.h
src/2-clustered/: CMakeLists.txt  main.cpp
src/2-predepth/: CMakeLists.txt  depth.cpp  depth.h  forward.cpp  forward.h  main.cpp  mesh.h
src/3-clustered/: CMakeLists.txt  cluster.cpp  cluster.h  common.h  forward.cpp  forward.h  main.cpp
src/4-hierarchyz/: CMakeLists.txt  common.cpp  common.h  hierarchy.cpp  hierarchy.h  main.cpp  renderer.cpp  renderer.h
src/5-bindless/: CMakeLists.txt  main.cpp
src/basic/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h
src/common/: CMakeLists.txt  camera.cpp  camera.h  common.h  light.h  mesh.cpp  mesh.h  sky.cpp  sky.h
src/deferred/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h
