CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(EFFICIENT-SHADING)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(AGZ_ENABLE_D3D12 ON)
ADD_SUBDIRECTORY(lib/agz-utils)
TARGET_COMPILE_DEFINITIONS(AGZUtils PUBLIC AGZ_UTILS_SSE _UNICODE)
SET_TARGET_PROPERTIES(AGZUtils D3D12MemAlloc PROPERTIES FOLDER "ThirdParty")

set(PROJECT_ASSET_DIR "${CMAKE_SOURCE_DIR}")

ADD_SUBDIRECTORY(src/common)
ADD_SUBDIRECTORY(src/0-basic)
ADD_SUBDIRECTORY(src/1-deferred)
ADD_SUBDIRECTORY(src/2-predepth)
ADD_SUBDIRECTORY(src/3-clustered)
ADD_SUBDIRECTORY(src/4-hierarchyz)
ADD_SUBDIRECTORY(src/5-bindless)
